<resources>
    <string name="app_name">Sudoku</string>

    <string name="main_homePage">主頁</string>
    <string name="main_dailyChallenge">每日挑戰</string>
    <string name="main_dataStatistics">資料統計</string>

    <string name="homePage_newGame">新遊戲</string>
    <string name="homePage_continue">繼續遊戲</string>
    <string name="homePage_bar">-</string>

    <string name="newGame_cancel">取消</string>
    <string name="newGame_easy">簡單</string>
    <string name="newGame_normal">一般</string>
    <string name="newGame_hard">困難</string>

    <string name="game_number">0</string>
    <string name="game_time">00:08</string>
    <string name="game_wrong">錯誤:</string>
    <string name="game_wrongChance">/3</string>
    <string name="game_eraser">清除</string>
    <string name="game_hint">提示</string>

    <string name="record_playedGame">已開始的遊戲</string>
    <string name="record_game">遊戲</string>
    <string name="record_time">時間</string>
    <string name="record_score">分數</string>
    <string name="record_winCombo">連勝數</string>
    <string name="record_reset">重置統計資料</string>
    <string name="record_playedGameTimes">已開始的遊戲</string>
    <string name="record_playedWinTimes">已獲勝遊戲</string>
    <string name="record_winRare">勝率</string>
    <string name="record_noMistakeWinTimes">零錯誤獲勝數</string>
    <string name="record_bestTime">最佳時間</string>
    <string name="record_averageTime">平均時間</string>
    <string name="record_bestScore">最佳分數</string>
    <string name="record_averageScore">平均分數</string>
    <string name="record_nowCombo">目前連勝數</string>
    <string name="record_bestCombo">最佳連勝數</string>

    <string name="dataStatistics_statistics">統計資料</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>