<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_action_sheets"
        android:text="@string/newGame_cancel"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_action_sheets"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_easy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:text="@string/newGame_easy"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_normal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:text="@string/newGame_normal"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_easy" />

        <Button
            android:id="@+id/button_hard"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:text="@string/newGame_hard"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_light_more"
            app:layout_constraintBottom_toBottomOf="@+id/button_easy"
            app:layout_constraintTop_toTopOf="@id/button_normal" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_light_more"
        app:layout_constraintBottom_toBottomOf="@+id/button_normal"
        app:layout_constraintTop_toTopOf="@id/button_hard" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>