<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".homePage.game.GamePageFragment">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_back" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/color_lens"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/button_back"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/game_settings"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_back"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="1"
        tools:listitem="@layout/item_number" />

    <TextView
        android:id="@+id/textView_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/newGame_easy"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_largeFrame"
        app:layout_constraintStart_toStartOf="@+id/recyclerView_largeFrame" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView_largeFrame"
        app:layout_constraintEnd_toStartOf="@+id/recyclerView_largeFrame"
        app:layout_constraintTop_toTopOf="@+id/recyclerView_largeFrame" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_largeFrame"
        app:layout_constraintStart_toStartOf="@id/textView14"
        app:layout_constraintEnd_toEndOf="@id/textView16"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@+id/recyclerView_largeFrame"
        app:layout_constraintTop_toTopOf="@id/recyclerView_largeFrame"
        app:layout_constraintBottom_toBottomOf="@id/recyclerView_largeFrame"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_largeFrame"
        app:layout_constraintStart_toStartOf="@id/textView14"
        app:layout_constraintEnd_toEndOf="@id/textView16" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_largeFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:spanCount="3"
        tools:itemCount="9"
        tools:listitem="@layout/item_large_frame_number">

    </androidx.recyclerview.widget.RecyclerView>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView_mode"
        app:layout_constraintStart_toEndOf="@+id/textView_mode"
        app:layout_constraintTop_toTopOf="@+id/textView_mode"
        app:layout_constraintEnd_toStartOf="@id/wrong">

        <ImageView
            android:id="@+id/imageView_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_number"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_star"
            app:layout_constraintStart_toEndOf="@+id/imageView_star"
            app:layout_constraintTop_toTopOf="@+id/imageView_star" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/button_playStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pause"
        app:layout_constraintBottom_toBottomOf="@+id/textView_mode"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView_largeFrame"
        app:layout_constraintTop_toTopOf="@+id/textView_mode"
        tools:ignore="ContentDescription" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format="%s"
        android:text="@string/game_time"
        app:layout_constraintBottom_toBottomOf="@+id/button_playStatus"
        app:layout_constraintEnd_toStartOf="@+id/button_playStatus"
        app:layout_constraintTop_toTopOf="@+id/button_playStatus" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/timer"
        app:layout_constraintTop_toTopOf="@id/timer"
        app:layout_constraintBottom_toBottomOf="@id/timer"
        app:layout_constraintStart_toEndOf="@id/star">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_wrong"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/wrongTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/game_number"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_wrongChance"
            app:layout_constraintBottom_toBottomOf="@+id/wrongTimes"
            app:layout_constraintStart_toEndOf="@+id/wrongTimes"
            app:layout_constraintTop_toTopOf="@+id/wrongTimes" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pauseFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <ImageView
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play_circle"
            app:layout_constraintStart_toStartOf="@id/pauseFrame"
            app:layout_constraintEnd_toEndOf="@id/pauseFrame"
            app:layout_constraintTop_toTopOf="@id/pauseFrame"
            app:layout_constraintBottom_toBottomOf="@id/pauseFrame"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_number"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hint">

        <ImageView
            android:id="@+id/imageView_eraser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/eraser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_eraser"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_eraser"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView_number"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eraser">

        <ImageView
            android:id="@+id/imageView_hint"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/textView_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_hint"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_hint"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
